Added functioning non-openmensa endpoints
